--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/bootstrap.min.css";
+@import "./assets/fonts/font-awesome.min.css";
+@import "./assets/fonts/fontawesome-all.min.css";
+@import "./assets/fonts/fontawesome5-overrides.min.css"
+
+
